browser specific scrollbar fixes

--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,12 @@
 
 ::-webkit-scrollbar {
     display: none;
-  }
+}
+
+html {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
 
 @font-face {
     font-family: 'poppins';
